<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/server_edit_name_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_label"/>
    <EditText android:id="@+id/server_edit_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_host"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:id="@+id/server_edit_host" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="textUri"/>
        <EditText android:id="@+id/server_edit_port" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/default_server_port" android:inputType="number"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_username"/>
    <EditText android:id="@+id/server_edit_username" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_password"/>
    <EditText android:id="@+id/server_edit_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword"/>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/holo_red_dark" android:layout_gravity="center_horizontal" android:id="@+id/server_edit_error" android:padding="8dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Error: error text here."/>
</LinearLayout>
